fix(bio): add important to overflow

--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,7 @@ button {
   height: 100%;
   max-height: 500px;
   line-height: 1.5;
-  overflow-y: auto;
+  overflow-y: auto !important;
   scrollbar-width: thick;
   scrollbar-color: rgb(43, 255, 0) black;
 }
